--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "bootstrap-vue-next": "^0.28.0",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.16.0",
+    "nuxt-auth-utils": "^0.5.24",
     "unplugin-icons": "^22.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@iconify-json/bi": "^1.2.2",
