--- a/.envsample
+++ b/.envsample
@@ -1,10 +1,16 @@
-VITE_BASEROW_URL = 'https://api.baserow.io'
-VITE_BASEROW_BASE_NAME ='TimeTracker'
-VITE_BASEROW_BASE_ID = 'baserow base id'
-VITE_BASEROW_TIMETRACK = "timetrack table id"
-VITE_BASEROW_PAUSETRACK = "pausetrack table id"
-VITE_BASEROW_TOKEN = 'your baserow token'
+# public keys
+NUXT_PUBLIC_BASE_URL = 'https://baserow.io/database/'
+NUXT_PUBLIC_BASE_ID = 'base id'
+NUXT_PUBLIC_TABLE_TIMETRACK_ID = "timetrack table id"
+NUXT_PUBLIC_TABLE_PAUSETRACK_ID = "pausetrack table id"
+NUXT_PUBLIC_BASE_NAME ='TimeTracker'
+
+# private keys
+NUXT_BASEROW_API_URL = 'https://api.baserow.io'
+NUXT_BASEROW_TOKEN = 'your baserow token'
+NUXT_SESSION_PASSWORD = "a-random-password-with-at-least-32-characters"
+
 # for tests only
 VITE_BASEROW_LOGIN = "your email only for test"
 VITE_BASEROW_MDP = "your password only for test"
-VITE_BASEROW_ID = 123456
+VITE_BASEROW_USER_ID = 123456
