--- a/.envsample
+++ b/.envsample
@@ -1,14 +1,12 @@
 # public keys
 NUXT_PUBLIC_BASE_URL = 'https://baserow.io/database/'
+NUXT_PUBLIC_BASE_API_URL = 'https://api.baserow.io'
 NUXT_PUBLIC_BASE_ID = 'base id'
 NUXT_PUBLIC_TABLE_TIMETRACK_ID = "timetrack table id"
 NUXT_PUBLIC_TABLE_PAUSETRACK_ID = "pausetrack table id"
 NUXT_PUBLIC_BASE_NAME ='TimeTracker'
 NUXT_PUBLIC_WORKSPACE_ID = 'workspace id'
-
-# private keys
-NUXT_BASEROW_API_URL = 'https://api.baserow.io'
-NUXT_SESSION_PASSWORD = "a-random-password-with-at-least-32-characters"
+NUXT_PUBLIC_TOKEN = "a-random-password-with-at-least-32-characters"
 
 # for tests only
 VITE_BASEROW_LOGIN = "your email only for test"
