--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timetracker",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "NocoLowco Time Tracker",
   "author": "laurent",
   "type": "module",
@@ -18,6 +18,7 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "@fullcalendar/vue3": "^6.1.19",
     "@nuxt/ui": "^4.2.1",
+    "@nuxtjs/i18n": "^10.2.1",
     "@vite-pwa/nuxt": "^1.1.0",
     "nuxt": "^4.2.1",
     "nuxt-auth-utils": "^0.5.25",
